crates/minimal/tests/snapshots/dash_snapshots__detail_pane_names_a_declared_deny_all.snap
---
source: crates/minimal/tests/dash_snapshots.rs
expression: rendered
---
"┌──────────────────────────────┐┌ api-staging · 00000000 ──────────────────────────────────────────┐"
"│      ▃🭕🭏🭕🭏 M I N I M A L     ││ project /src/api                  net     OwnIp                  │"
"│ ──────────────────────────── ││ user    chroma                    idle    -                      │"
"│ /                            ││ title   -                                                        │"
"│ ──────────────────────────── ││ bells   -                                                        │"
"│ ▼ host  v0.1              ●  ││ ─ Policy ─────────────────────────────────────────────────────── │"
"│   ▸ api-staging     OwnIp    ││ egress                                                           │"
"│                              ││   deny-all                                                       │"
"│                              ││ ingress                                                          │"
"│                              ││   deny-all                                                       │"
"│                              ││ ─ Preview (live screen snapshot) ─────────────────────────────── │"
"│                              ││ loading preview…                                                 │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘"
" ↑↓ move · / filter · enter attach · d destroy · r rename · n new · q quit                          "
