crates/minimal/tests/snapshots/dash_snapshots__detail_pane_shows_dynamic_ingress.snap
---
source: crates/minimal/tests/dash_snapshots.rs
assertion_line: 231
expression: render(&mut model)
---
"┌──────────────────────────────┐┌ api-staging · 00000000 ──────────────────────────────────────────┐"
"│      ▃🭕🭏🭕🭏 M I N I M A L     ││ project /src/api                  net     OwnIp                  │"
"│ ──────────────────────────── ││ user    chroma                    idle    -                      │"
"│ /                            ││ title   -                                                        │"
"│ ──────────────────────────── ││ bells   -                                                        │"
"│ ▼ host  v0.1              ●  ││ ─ Policy ─────────────────────────────────────────────────────── │"
"│   ▸ api-staging     OwnIp    ││ egress                                                           │"
"│                              ││   subnets  10.0.0.0/8                                            │"
"│                              ││   dns hosts  allow-all                                           │"
"│                              ││   protocols  allow-all                                           │"
"│                              ││   deny subnets  192.168.0.0/16                                   │"
"│                              ││ ingress                                                          │"
"│                              ││   tcp  :8080 → :80                                               │"
"│                              ││   dynamic ingress  ask                                           │"
"│                              ││ ─ Preview (live screen snapshot) ─────────────────────────────── │"
"│                              ││ loading preview…                                                 │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘"
" ↑↓ move · / filter · enter attach · d destroy · r rename · n new · q quit                          "
