crates/minimal/tests/snapshots/dash_snapshots__empty_list.snap
---
source: crates/minimal/tests/dash_snapshots.rs
expression: "render(&mut fixed_model(vec![]))"
---
"┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────┐"
"│      ▃🭕🭏🭕🭏 M I N I M A L     ││ no session selected                                              │"
"│ ──────────────────────────── ││                                                                  │"
"│ /                            ││                                                                  │"
"│ ──────────────────────────── ││                                                                  │"
"│ no sessions (n to create)    ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘"
" ↑↓ move · / filter · enter attach · d destroy · r rename · n new · q quit                          "
