crates/minimal/tests/snapshots/dash_snapshots__filtered_with_status.snap
---
source: crates/minimal/tests/dash_snapshots.rs
expression: "format!(\"{}\", terminal.backend())"
---
"┌────────────────────────┐┌────────────────────────────────────────────────────┐"
"│   ▃🭕🭏🭕🭏 M I N I M A L  ││ no session selected                                │"
"│ ────────────────────── ││                                                    │"
"│ / bench                ││                                                    │"
"│ ────────────────────── ││                                                    │"
"│ ▼ host  v0.1        ●  ││                                                    │"
"│ ▼ vm  v0.1          ●  ││                                                    │"
"│     bench         -    ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"│                        ││                                                    │"
"└────────────────────────┘└────────────────────────────────────────────────────┘"
" ↑↓ move · / filter · esc clear filter · enter attach · d destroy · r refreshed "
