crates/minimal/tests/snapshots/dash_snapshots__preview_section_with_screen_snapshot.snap
---
source: crates/minimal/tests/dash_snapshots.rs
expression: render(&mut model)
---
"┌──────────────────────────────┐┌ api-staging · 00000000 ──────────────────────────────────────────┐"
"│      ▃🭕🭏🭕🭏 M I N I M A L     ││ project /src/api                  net     ?                      │"
"│ ──────────────────────────── ││ user    ?                         idle    -                      │"
"│ /                            ││ title   -                                                        │"
"│ ──────────────────────────── ││ bells   -                                                        │"
"│ ▼ host  v0.1              ●  ││ ─ Policy ─────────────────────────────────────────────────────── │"
"│   ▸ api-staging         -    ││ loading policy…                                                  │"
"│                              ││ ─ Preview (live screen snapshot) ─────────────────────────────── │"
"│                              ││ $ cargo run                                                      │"
"│                              ││     Compiling minimal v0.1 (1457 deps)…                          │"
"│                              ││     Finished `dev` profile in 3m 04s                             │"
"│                              ││ $                                                                │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘"
" ↑↓ move · / filter · enter attach · d destroy · r rename · n new · q quit                          "
