crates/minimal/tests/snapshots/dash_snapshots__single_host.snap
---
source: crates/minimal/tests/dash_snapshots.rs
expression: render(&mut model)
---
"┌──────────────────────────────┐┌──────────────────────────────────────────────────────────────────┐"
"│      ▃🭕🭏🭕🭏 M I N I M A L     ││ no session selected                                              │"
"│ ──────────────────────────── ││                                                                  │"
"│ /                            ││                                                                  │"
"│ ──────────────────────────── ││                                                                  │"
"│ ▼ host  v0.1              ●  ││                                                                  │"
"│     api-staging         -    ││                                                                  │"
"│     (unnamed)           -    ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"│                              ││                                                                  │"
"└──────────────────────────────┘└──────────────────────────────────────────────────────────────────┘"
" ↑↓ move · / filter · enter attach · d destroy · r rename · n new · q quit                          "
